# RV-Insights

./: .env  .gitignore  .opencode  AGENTS.md  CLAUDE.md  README.en.md  README.md  README_zh.md  docker-compose.yml  package.json  requirements.txt
backend/: .env  .env.template  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/adapters/: __init__.py  langchain_adapter.py
backend/app/api/: auth.py  cases.py  chat.py  deps.py  file_download.py  files.py  memory.py  models.py  pipeline.py  router.py  science.py  skills.py  statistics.py  tools.py  tooluniverse.py
backend/app/datasources/: patchwork.py
backend/app/models/: __init__.py  chat_schemas.py  model_schemas.py  schemas.py  skill_schemas.py  user.py
backend/app/pipeline/: __init__.py  cost.py  events.py  graph.py  nodes.py  state.py  stubs.py  verification.py
backend/app/prompts/: __init__.py
backend/app/services/: artifact_manager.py  auth_service.py  chat_runner.py  model_factory.py  notifications.py  skill_loader.py  tool_loader.py  tooluniverse_registry.py
backend/app/tools/: __init__.py  code_analysis.py  web_search.py
backend/app/utils/: response.py
backend/skills/riscv_contribution_guide/: SKILL.md  prompt.txt
backend/skills/riscv_isa_expert/: SKILL.md  prompt.txt
backend/tests/: test_auth.py  test_cases.py  test_chat_and_auth.py  test_health.py  test_notifications.py  test_pipeline_coverage.py  test_pipeline_sprint6.py  test_pipeline_sprint7.py  test_skills.py  test_source_fetcher.py  test_tools.py  test_tooluniverse.py
tasks/: todo.md  (+10 more)
(+728 files in other folders)
